[tool.poetry]
name = "codelimit"
version = "0.17.0"
description = ""
authors = ["Rob van der Leek <robvanderleek@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
codelimit = "codelimit.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pygments = "^2.13.0"
requests = "^2.28.2"
typer = "^0.9.0"
aiohttp = "^3.9.0"
pyyaml = "^6.0.1"
rich = "^13.7.1"
pathspec = "^0.12.1"
pyperclip = "^1.9.0"
sh = "^2.1.0"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --specpath dist -n codelimit codelimit/__main__.py"

[tool.poe.tasks.regression]
help = "Regression test runner"
cmd = "python tests/regression.py"

[tool.mypy]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:tool.poetry.version" ]
version_variables = [ "codelimit/version.py:version" ]
upload_to_repository = false
upload_to_release = false

[tool.poetry.group.dev.dependencies]
pyinstaller = {version = "^6.0", python = ">=3.8,<3.14"}
pytest-cov = "^4.0.0"
pytest = "^7.2.1"
poethepoet = "^0.21.1"
types-pyyaml = "^6.0.12.20240917"
mypy = "^1.13.0"
black = "^24.10.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
