[project]
name = "codelimit"
version = "0.21.0"
description = "Your Refactoring Alarm"
authors = [{ name = "Rob van der Leek", email = "robvanderleek@gmail.com" }]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "aiohttp>=3.9.0,<4",
    "click<8.2.0",
    "pygments>=2.13.0,<3",
    "pathspec>=0.12.1,<0.13",
    "pyperclip>=1.9.0,<2",
    "pyyaml>=6.0.1,<7",
    "requests>=2.28.2,<3",
    "rich>=14.2.0",
    "sh>=2.1.0,<3",
    "typer>=0.16.0",
]

[project.urls]
Changelog = "https://github.com/getcodelimit/codelimit/blob/master/CHANGELOG.md"
Documentation = "https://getcodelimit.github.io"
Source = "https://github.com/getcodelimit/codelimit"

[project.scripts]
codelimit = "codelimit.__main__:cli"

[dependency-groups]
dev = [
    "pytest-cov>=4.0.0,<5",
    "pytest>=7.2.1,<8",
    "poethepoet>=0.21.1,<0.22",
    "types-pyyaml>=6.0.12.20240917,<7",
    "mypy>=1.13.0,<2",
    "black>=24.10.0,<25",
    "ruff>=0.8.2,<0.9",
    "pyinstaller>=6.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --specpath dist -n codelimit codelimit/__main__.py"

[tool.poe.tasks.regression]
help = "Regression test runner"
cmd = "python tests/regression.py"

[tool.mypy]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [ "codelimit/version.py:version" ]
upload_to_repository = false
upload_to_release = false
